src/test/deca/context/valid/objet/op_comp_valid_class_01.deca
// Description:
//   Op_comp for classes
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {

}

{
    A a;
    Object o = new Object();
    a == o;
}